--- a/WebMapStyling.css
+++ b/WebMapStyling.css
@@ -39,12 +39,26 @@ body {
     opacity: 0.7;
 }
 
-#updateWeightsBtn, #singleVariableMapBtn, .toggle-btn {
+#updateWeightsBtn {
     position: absolute;
     padding: 10px 15px;
     font-size: 16px;
     color: white;
     background-color: #0099ff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+    z-index: 1000;
+    font-family: 'Agency FB', Arial, sans-serif; /* Ensure buttons use Agency FB */
+}
+
+#singleVariableMapBtn, .toggle-btn {
+    position: absolute;
+    padding: 10px 15px;
+    font-size: 16px;
+    color: white;
+    background-color: #00b368;
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -63,8 +77,12 @@ body {
     left: 150px;
 }
 
-#updateWeightsBtn:hover, #singleVariableMapBtn:hover {
+#updateWeightsBtn:hover {
     background-color: #aa00b3;
+}
+
+#singleVariableMapBtn:hover {
+    background-color: #92b300;
 }
 
 .collapsible-container {
